Added WFS layers like a control
Added new Control to load WFS layers into Map. Some minor modifications into config files

--- a/config/map.controls.yaml
+++ b/config/map.controls.yaml
@@ -19,7 +19,8 @@
     PermalinkButton,
     ZoomToMaxExtent,
     ZoomBox,
-    ZoomOut
+    ZoomOut,
+    WFSLayer
   ],
   ## Needs this to include TOC
   TOC : !!bool false
