Added FullScreen control
FullScreen control creates a new window using permalink control with map in fullscreen mode. Created a fullscreen new parameter in map.options.yaml to manage this functionality

--- a/config/map.controls.yaml
+++ b/config/map.controls.yaml
@@ -19,6 +19,7 @@ controls:
  - ZoomToMaxExtent
  - ZoomBox
  - ZoomOut
+ - FullScreen
  - WFSLayer
   ## Needs this to include TOC
 TOC : !!bool false
