Some yaml files mistakes fixed.

--- a/src/Control/HelpButton/HelpButton.yaml
+++ b/src/Control/HelpButton/HelpButton.yaml
@@ -1,4 +1,4 @@
-## PermalinkButton parameter control
+## HelpButton parameter control
 init:
   displayClass: 'olControlHelpBtn'
   trigger: eval(launchHelpDialog)
