Closes #16 custom layer switcher customizable
Now users can define how to show the base layers
and overlayers section in the Custom Layer Switcher
with two new specific parameters.
Both the yaml and js files include brief descrip-
tions of those.

--- a/src/Control/CustomLayerSwitcher/CustomLayerSwitcher.yaml
+++ b/src/Control/CustomLayerSwitcher/CustomLayerSwitcher.yaml
@@ -1,6 +1,10 @@
 ## CustomLayerSwitcher parameter control
 init:
-  firstBaseLayers: false
+  firstBaseLayers: !!bool false
+  ## -1 hides the section, 0 displays the layers only
+  ## with the specified groups, 1 displays it with an additional root node
+  showOverlays: !!int 1
+  showBaseLayers: !!int 1
 properties:
 ## If you put a blank translation for these titles (e.g. ' '), their top nodes are ignored.
   'en':
