Cleaned and improved the geojson info popup.
Some improvements have been made in the geojson
info popup control. These include:
- Code cleaning (removing code that remained from
the WMS version).
- Specific class for customizing the popup.
- Option for closing the previous popup when opening
a new one (new parameter in the yaml file).

--- a/src/Control/FeatureInfoGeoJson/FeatureInfoGeoJson.yaml
+++ b/src/Control/FeatureInfoGeoJson/FeatureInfoGeoJson.yaml
@@ -3,6 +3,7 @@ init:
   queryVisible : !!bool true
   title: eval($.i18n('feature_info_geojson_tooltip'))
   noDataMessage : eval($.i18n('feature_info_geojson_no_data_message'))
+  singletonPopup: true
 properties:
   'en':
     'feature_info_geojson_tooltip': 'GeoJson Feature Info'
